@@ -63,12 +63,12 @@
     </section>
 
     <section>
-      <h2>The <a>Point</a> dictionary</h2>
+      <h2>The <a>CSSPoint</a> dictionary</h2>
       <p>
         A 2D points and 3D points are represented by the following WebIDL dictionary:
       </p>
 
-      <dl title='dictionary Point' class='idl'>
+      <dl title='dictionary CSSPoint' class='idl'>
         <dt>unrestricted double x = 0</dt>
         <dd>
           The x coordinate of the point.
@@ -688,11 +688,11 @@ matrix.rotateBy(45);
             <dd>
               Returns the determinant of the current matrix.
             </dd>
-            <dt>Point transformPoint()</dt>
+            <dt>CSSPoint transformPoint()</dt>
             <dd>
               <dl class='parameters'>
-                <dt>Point point</dt>
-                <dd>A Point dictionary.</dd>
+                <dt>CSSPoint point</dt>
+                <dd>A CSSPoint dictionary.</dd>
               </dl>
               The point is post-multiplied on the current matrix and returns the resulting point. <code>point</code> is not modified.
             </dd>
