@@ -1,3 +1,6 @@
+2013-07-02  Dirk Schulze  <dschulze@adobe.com>
+	Rename Point dictionary to CSSPoint dictionary.
+
 2013-06-29  Dirk Schulze  <dschulze@adobe.com>
 	Incorporated feedback and added more references to CSS Transforms.
 	Translation, Rotation, Scale and Skew matrices described and referenced by CSS Transforms.
